# 3DEngine

./: .gitignore  CMakeLists.txt  README.md  build_3d_demos.bat  build_examples.bat  build_manual.bat  run_examples.bat  test_build.bat  test_phase2.bat  test_phase2_basic.bat  test_simple_math.bat
Engine/: CMakeLists.txt
Engine/Core/: Engine.cpp  Engine.h  Logger.cpp  Logger.h
Engine/Math/: Math.h  MathTypes.h  Matrix.h  Quaternion.h  Vector.h
Engine/Platform/: Window.cpp  Window.h
Engine/Renderer/: Buffer.cpp  Buffer.h  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Examples/: AnimatedTriangleDemo.cpp  BasicCubeDemo.cpp  BasicTriangleDemo.cpp  CMakeLists.txt  CameraDemo.cpp  MathPlayground.cpp  MultipleCubes.cpp  RotatingCube.cpp  SpinningTriangle.cpp  TriangleDemo.cpp
Shaders/: BasicTriangle.frag  BasicTriangle.vert  Cube.vert
Tests/: CMakeLists.txt  CoreComponentTests.cpp  Phase1IntegrationTests.cpp  Phase2BasicTests.cpp  Phase2IntegrationTests.cpp  Phase2MathTests.cpp  SimpleMathTests.cpp
